Leaving comments while finding my way around

--- a/www/index.html
+++ b/www/index.html
@@ -1,21 +1,19 @@
 <!doctype html>
 <html>
     <head>
-        <title>My PouchApp</title>
-        <script src="cordova-2.1.0.js" type="text/javascript">
-        </script>
-        <script type = "text/javascript" src="IndexedDBShim.min.js">
-        </script>
-        <script type = "text/javascript" src="pouch.alpha.js">
-        </script>
+        <title>Frequently-Connected Mobile</title>
+        <script src="cordova-2.1.0.js" type="text/javascript"></script>
+        <script type="text/javascript" src="IndexedDBShim.min.js"></script>
+        <script type="text/javascript" src="pouch.alpha.js"></script>
         <!-- app stuff -->
-        <script type = "text/javascript" src="jquery.mustache.js"></script>
-        <script type = "text/javascript" src="pathbinder.js"></script>
-        <script type = "text/javascript" src="showdown.min.js"></script>
+        <script type="text/javascript" src="jquery.mustache.js"></script>
+        <script type="text/javascript" src="pathbinder.js"></script>
+        <script type="text/javascript" src="showdown.min.js"></script>
+        <meta name="viewport" content="width=device-width, initial-scale=1"> 
         <meta charset="UTF-8">
     </head>
     <body>
-    	<h1>Preparing Quantum Phasers...</h1>
+    	<h1>Hello...</h1>
     	<a href="#" onclick="location.reload();">Reload</a>
         <script type = "text/javascript">
             var running = false;
